changes in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,15 @@
 {
-    "version": 2,
-    "routes": [
-      {
-        "src": "/",
-        "dest": "/api/index.js"
-      },
-        {
-        "src": "/api/(.*)",
-        "dest": "/api/index.js"                                     
-      },
-      {
-        "src": "/uploads/(.*)",
-        "dest": "/api/index.js"
-      }
-    ],
-    "functions": {
-      "api/index.js": {
-        "memory": 1024,
-        "maxDuration": 30
-      }
-    },
-    "env": {
-      "NODE_ENV": "production"
+  "version": 2,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/server.js"
+    }
+  ],
+  "functions": {
+    "server.js": {
+      "memory": 1024,
+      "maxDuration": 10
     }
   }
+}
